--- a/less/ferret/style_tooltips.less
+++ b/less/ferret/style_tooltips.less
@@ -5,11 +5,7 @@
 	0% {bottom: 18px; opacity: 0;}
 	100% {bottom: 25px; opacity: 1;}
 }
-@-moz-keyframes toolTip {
-	0% {bottom: 18px; opacity: 0;}
-	100% {bottom: 25px; opacity: 1;}
-}
-@-ms-keyframes toolTip {
+@keyframes toolTip {
 	0% {bottom: 18px; opacity: 0;}
 	100% {bottom: 25px; opacity: 1;}
 }
@@ -17,8 +13,7 @@
 	position: relative;
 	span {
 		-webkit-animation: toolTip 0.3s ease-in;
-		-moz-animation: toolTip 0.3s ease-in;
-		-ms-animation: toolTip 0.3s ease-in;
+		animation: toolTip 0.3s ease-in;
 		position: absolute;
 		bottom: 25px;
 		width: 220%;
@@ -47,5 +42,6 @@
 			left: 50%;
 			margin-left: -7px;
 		}
+		@media (max-width: 599px) {display: none !important;}
 	}
 }
