--- a/resources/wordpress/ferret/less/project/project_settings.less
+++ b/resources/wordpress/ferret/less/project/project_settings.less
@@ -1,12 +1,4 @@
-/*********************************************
-Ferret Main Stylesheet
-Last Updated: 12/21/12
-Written by: Sean Stopnik
-Email: sstopnik@redventures.com
-*********************************************/
-
-
-// Site-wide Settings & Variables
+// Project Settings & Variables
 
 
 // Grid Settings
@@ -148,43 +140,3 @@ Email: sstopnik@redventures.com
 
 // Extras
 @striped: url(../images/bg_stripes.png);
-
-
-
-
-
-// Included Stylesheets
-
-
-// Base Styles (Do Not Remove)
-@import "ferret/box_grid.less";
-@import "ferret/style_fonts.less";
-@import "ferret/style_base.less";
-@import "ferret/style_typography.less";
-@import "ferret/style_mixins.less";
-
-
-// Extras (Add or Remove as Needed)
-@import "ferret/style_buttons.less"; // Button Styles
-@import "ferret/style_nav.less"; // Header Navigation Styles
-@import "ferret/style_forms.less"; // Form Styles
-@import "ferret/style_lists.less"; // List Styles
-@import "ferret/style_tabs.less"; // Content Tabs Styles
-@import "ferret/style_tables.less"; // Table Styles
-@import "ferret/style_tooltips.less"; // Tooltip Styles
-
-
-// Main Styles
-@import "ferret/style_main.less"; // This is the Stylesheet for the Project
-
-
-// Fancybox
-@import "ferret/fancybox.less"; //
-
-
-// Responsive Override Styles
-@import "ferret/style_responsive.less";
-
-
-// Include this file to support IE6-7
-@import "ferret/box_grid_ie6_7.less";
