--- a/resources/wordpress/ferret/style.css
+++ b/resources/wordpress/ferret/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Ferret
+Theme Name: Ferret Framework
 Theme URI: http://www.ferretframework.com
 Description: Ferret - The fast, agile, fully responsive rapid-prototyping framework
 Author: Sean Stopnik
