--- a/css/ferret.css
+++ b/css/ferret.css
@@ -1,6 +1,6 @@
 /*********************************************
-Ferret Main Stylesheet
-Last Updated: 12/21/12
+Ferret Framework Main Stylesheet
+Last Updated: 1/9/13
 Written by: Sean Stopnik
 Email: sstopnik@redventures.com
 *********************************************/
@@ -484,6 +484,7 @@ button {
   border: 0;
   margin: 0;
   -webkit-appearance: none;
+  outline: none;
 }
 .bold,
 b,
@@ -497,7 +498,16 @@ i {
 ::-webkit-input-placeholder {
   color: #898989;
 }
-input:-moz-placeholder {
+input[type="text"]:-moz-placeholder {
+  color: #898989;
+}
+input[type="tel"]:-moz-placeholder {
+  color: #898989;
+}
+input[type="email"]:-moz-placeholder {
+  color: #898989;
+}
+textarea:-moz-placeholder {
   color: #898989;
 }
 ::selection {
@@ -569,7 +579,7 @@ a:hover {
   color: #353535;
 }
 p {
-  margin: 0 0 15px 0;
+  margin: 0 0 20px 0;
 }
 p:last-child {
   margin: 0;
@@ -598,7 +608,7 @@ blockquote {
 blockquote cite {
   display: block;
   color: #353535;
-  font-size: 14px;
+  font-size: 93%;
   font-style: italic;
   margin-top: 12px;
 }
@@ -845,7 +855,7 @@ header nav ul li a:hover {
   right: 20px;
   width: 40px;
   height: 40px;
-  border-radius: 20px;
+  border-radius: 50%;
   background: #494949 url(../images/button_mobile_nav.png) no-repeat center center;
   cursor: pointer;
   z-index: 100;
@@ -884,7 +894,7 @@ header nav ul li a:hover {
     border-right: 7px solid transparent;
     border-bottom: 7px solid #353535;
   }
-  header nav li {
+  header nav ul li {
     float: none !important;
     display: block;
     height: 60px;
@@ -894,18 +904,18 @@ header nav ul li a:hover {
     background: #353535;
     margin: 0 !important;
   }
-  header nav li:first-child {
+  header nav ul li:first-child {
     border-top: 0;
     border-radius: 3px 3px 0 0;
   }
-  header nav li:last-child {
+  header nav ul li:last-child {
     border-bottom: 0;
     border-radius: 0 0 3px 3px;
   }
-  header nav li a {
+  header nav ul li a {
     display: block;
     width: 100%;
-    font-size: 15px;
+    font-size: 12px;
     padding: 0 20px;
   }
 }
@@ -966,10 +976,16 @@ textarea.inputfield {
   width: 15px;
   height: 15px;
   border: 1px solid #e1e1e1;
-  background: #fff;
+  background: #ffffff;
   -webkit-appearance: none;
   margin: 0 7px 20px 0;
   cursor: pointer;
+}
+.checkbox:focus,
+.radio-button:focus {
+  outline: none;
+  border-color: #ebc855;
+  background: #f8edc7;
 }
 @media (max-width: 599px) {
   .checkbox,
@@ -1101,13 +1117,14 @@ ul.tabs-nav li a {
   font-size: 14px;
   font-weight: normal;
   line-height: 1.9;
+  letter-spacing: 0;
 }
 ul.tabs-nav li a:hover {
   color: #353535;
 }
 ul.tabs-nav li.active {
   padding-top: 9px;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid #ffffff;
   margin-top: -3px;
   background: #ffffff;
 }
@@ -1133,6 +1150,9 @@ ul.tabs-nav li.active a {
     margin-top: 0;
     background: none;
   }
+  ul.tabs-nav li a {
+    font-size: 90%;
+  }
 }
 .tab-frame {
   float: left;
@@ -1151,6 +1171,7 @@ table thead th {
   color: #ffffff;
   font-family: 'OpenSansSemi';
   font-weight: normal;
+  font-size: 14px;
 }
 table thead th:first-child {
   border-radius: 3px 0 0 0;
@@ -1407,10 +1428,11 @@ code span:hover {
   vertical-align: top;
 }
 #fancybox-frame {
+  display: block;
   width: 100%;
   height: 100%;
   border: none;
-  display: block;
+  overflow: auto;
 }
 #fancybox-left,
 #fancybox-right {
