--- a/less/project/ferret/style_nav.less
+++ b/less/project/ferret/style_nav.less
@@ -29,11 +29,11 @@ header {
 }
 .mobile-nav {
 	position: absolute;
-	top: 10px;
+	top: ((@nav-bar-height - @mobile-nav-button-height) / 2);
 	right: 20px;
-	width: 40px;
-	height: 40px;
-	border-radius: 20px;
+	width: @mobile-nav-button-height;
+	height: @mobile-nav-button-height;
+	border-radius: 50%;
 	background: @mobile-nav-button url(../images/button_mobile_nav.png) no-repeat center center; 
 	cursor: pointer;
 	z-index: 100;
@@ -57,13 +57,13 @@ header {
 	.mobile-nav {display: block;}
     header nav {
     	position: relative;
-    	height: 60px;
+    	height: @nav-bar-height;
 	    ul {
-	    	margin-top: 70px;
+	    	margin-top: @nav-bar-height + 10;
 	    	display: none;
 		    &:before {
 			    position: absolute;
-			    top: 63px;
+			    top: @nav-bar-height + 3;
 			    right: 13px;
 			    width: 0;
 			    height: 0;
@@ -72,19 +72,24 @@ header {
 			    border-right: 7px solid transparent;
 			    border-bottom: 7px solid @mobile-nav-bg;
 		    }
-	    }
-	    li {
-	    	float: none !important;
-	    	display: block;
-		    height: 60px;
-		    border-top: 1px solid @mobile-nav-bg + 10; 
-		    border-bottom: 1px solid @mobile-nav-bg - 10;
-		    padding: 0;
-		    background: @mobile-nav-bg;
-		    margin: 0 !important;
-		    &:first-child {border-top: 0; border-radius: 3px 3px 0 0;}
-		    &:last-child {border-bottom: 0; border-radius: 0 0 3px 3px;}
-		    a {display: block; width: 100%; font-size: 15px; padding: 0 20px;}
+		    li {
+		    	float: none !important;
+		    	display: block;
+			    height: @mobile-nav-menu-height;
+			    border-top: 1px solid @mobile-nav-bg + 10; 
+			    border-bottom: 1px solid @mobile-nav-bg - 10;
+			    padding: 0;
+			    background: @mobile-nav-bg;
+			    margin: 0 !important;
+			    &:first-child {border-top: 0; .radius(3px 3px 0 0);}
+			    &:last-child {border-bottom: 0; .radius(0 0 3px 3px);}
+			    a {
+			    	display: block;
+			    	width: 100%;
+			    	font-size: @mobile-nav-font-size;
+			    	padding: 0 20px;
+			    }
+		    }
 	    }
     }
 }
