--- a/less/project/ferret/style_tooltips.less
+++ b/less/project/ferret/style_tooltips.less
@@ -5,11 +5,7 @@
 	0% {bottom: 18px; opacity: 0;}
 	100% {bottom: 25px; opacity: 1;}
 }
-@-moz-keyframes toolTip {
-	0% {bottom: 18px; opacity: 0;}
-	100% {bottom: 25px; opacity: 1;}
-}
-@-ms-keyframes toolTip {
+@keyframes toolTip {
 	0% {bottom: 18px; opacity: 0;}
 	100% {bottom: 25px; opacity: 1;}
 }
@@ -17,22 +13,21 @@
 	position: relative;
 	span {
 		-webkit-animation: toolTip 0.3s ease-in;
-		-moz-animation: toolTip 0.3s ease-in;
-		-ms-animation: toolTip 0.3s ease-in;
+		animation: toolTip 0.3s ease-in;
 		position: absolute;
 		bottom: 25px;
 		width: 220%;
 		left: -60%;
 		font-family: @tooltip-font;
 		letter-spacing: @tooltip-letter-spacing;
-		font-size: 80%;
+		font-size: @tooltip-font-size;
 		font-weight: @tooltip-weight;
 		line-height: 1.6;
 		text-align: center;
 		padding: 7px 10px;
 		color: @tooltip-color;
 		background: @tooltip-bg;
-		.radius;
+		.radius(@tooltip-border-radius);
 		z-index: 100;
 		display: none;
 		&:after {
@@ -47,5 +42,6 @@
 			left: 50%;
 			margin-left: -7px;
 		}
+		@media (max-width: 599px) {display: none !important;}
 	}
 }
