--- a/less/project/ferret/fancybox.less
+++ b/less/project/ferret/fancybox.less
@@ -17,9 +17,9 @@
 		position: absolute;
 		top: 0;
 		left: 0;
-		width: 40px;
-		height: 480px;
-		background-image: url(../images/fancybox/fancybox_loading.png);
+		width: 32px;
+		height: 32px;
+		background: url(../images/fancybox/fancybox_loading.gif);
 	}
 }
 #fancybox-overlay {
