--- a/less/project/ferret/fancybox.less
+++ b/less/project/ferret/fancybox.less
@@ -5,10 +5,10 @@
 	position: fixed;
 	top: 50%;
 	left: 50%;
-	width: 40px;
-	height: 40px;
-	margin-top: -20px;
-	margin-left: -20px;
+	width: 32px;
+	height: 32px;
+	margin-top: -16px;
+	margin-left: -16px;
 	cursor: pointer;
 	overflow: hidden;
 	z-index: 1104;
@@ -19,7 +19,7 @@
 		left: 0;
 		width: 32px;
 		height: 32px;
-		background: url(../images/fancybox/fancybox_loading.gif);
+		background: url(../images/fancybox/fancybox_loading.gif) no-repeat center center;
 	}
 }
 #fancybox-overlay {
