added variable for gutter width to grid

--- a/less/project/ferret/box_grid.less
+++ b/less/project/ferret/box_grid.less
@@ -65,7 +65,7 @@
 .box-17, .box-18, .box-19, .box-20, .box-21, .box-22, .box-23, .box-24,
 .box-half, .box-3rd, .box-2-3rd, .box-5th, .box-6th {
 	float: left;
-	padding: 0 10px;
+	padding: 0 @grid-gutter-width;
 }
 
 
