--- a/css/ferret.css
+++ b/css/ferret.css
@@ -44,6 +44,12 @@ Email: sstopnik@redventures.com
   text-align: left;
   margin: 0 -2px;
 }
+.row.no-gutter [class*="box-"] {
+  padding: 0;
+}
+.row.large-gutter [class*="box-"] {
+  padding: 0 20px;
+}
 .row:before,
 .row:after {
   display: block;
