--- a/less/project/ferret/box_grid.less
+++ b/less/project/ferret/box_grid.less
@@ -43,12 +43,13 @@
 			margin: 0 -2px;
 		}
 	}
-	&.no-gutter {
+	&.no-gutters {
+		padding: 0 @grid-gutter-width;
 		[class*="box-"] {
 			padding: 0;
 		}
 	}
-	&.large-gutter {
+	&.large-gutters {
 		[class*="box-"] {
 			padding: 0 @grid-gutter-width * 2;
 		}
