--- a/less/project/project_settings.less
+++ b/less/project/project_settings.less
@@ -3,7 +3,7 @@
 
 // Grid Settings
 @grid-boxes: 16; // Sets the Max Number of Grid Boxes per Row (up to 24)
-@grid-gutter-width: 10px; // Sets the Gutter Width between Grid Boxes
+@grid-gutter-width: 10px; // Sets the Gutter Width on Each Side of Each Box
 @grid-normal: 960px; // Sets Container Width
 @grid-wide: 1280px; // Sets Wide Screen Container Width
 @grid-row-with-spacing: 40px;
