--- a/less/project/ferret/style_tooltips.less
+++ b/less/project/ferret/style_tooltips.less
@@ -1,21 +1,11 @@
 // Tooltip Default Styles
 
 /* Tooltip */
-@-webkit-keyframes toolTip {
-	0% {bottom: 18px; opacity: 0;}
-	100% {bottom: 25px; opacity: 1;}
-}
-@keyframes toolTip {
-	0% {bottom: 18px; opacity: 0;}
-	100% {bottom: 25px; opacity: 1;}
-}
 .tooltip {
 	position: relative;
 	span {
-		-webkit-animation: toolTip 0.3s ease-in;
-		animation: toolTip 0.3s ease-in;
 		position: absolute;
-		bottom: 25px;
+		bottom: 18px;
 		width: 220%;
 		left: -60%;
 		font-family: @tooltip-font;
@@ -29,7 +19,9 @@
 		background: @tooltip-bg;
 		.radius(@tooltip-border-radius);
 		z-index: 100;
-		display: none;
+		opacity: 0;
+		.transition;
+		&:hover {background: @tooltip-bg;}
 		&:after {
 			position: absolute;
 			content: "";
@@ -43,5 +35,11 @@
 			margin-left: -7px;
 		}
 		@media (max-width: 599px) {display: none !important;}
+	}
+	&:hover {
+		span {
+			bottom: 25px;
+			opacity: 1;
+		}
 	}
 }
